# obsidian-hap

./: .gitignore  README.md  build-profile.json5  oh-package.json5
AppScope/: app.json5
entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/agent/: AgentPanel.ets  AgentService.ts  ApiClient.ts  ImageProcessor.ts  ModelRouter.ts
entry/src/main/ets/components/: FileList.ets
entry/src/main/ets/editor/: EditorPanel.ets  EditorToolbar.ets  HighlightEngine.ts
entry/src/main/ets/engine/: NoteBridge.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: EditorPage.ets  SettingsPage.ets
entry/src/main/ets/preview/: PreviewPanel.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
native/: Cargo.toml
native/.cargo/: config.toml
native/scripts/: build.sh
native/src/: engine.rs  files.rs  highlight.rs  lib.rs  markdown.rs  napi_bridge.c  storage.rs
