[package]
name = "note-core"
version = "0.1.0"
edition = "2021"
description = "Note-taking core engine for HarmonyOS – Markdown parsing, syntax highlighting, search"

[lib]
crate-type = ["staticlib"]

[dependencies]
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
syntect = "5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
once_cell = "1"

[target.'cfg(target_os = "linux")'.dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true
